--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Valentine's Rose Garden</title>
+    <title>sebuah kado kecil dari aku</title>
     <style>
       body {
         margin: 0;
